--- a/src/main/resources/templates/articles/Pythagorean.html
+++ b/src/main/resources/templates/articles/Pythagorean.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" th:href="@{/css/base/footer.min.css}">
     <link rel="stylesheet" th:href="@{/css/base/header.min.css}">
     <link rel="stylesheet" th:href="@{/css/base/article.css}">
+    <link rel="stylesheet" th:href="@{/css/article/Pythagorean.css}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" th:href="@{/img/logo/apple-touch-icon.png}">
     <link rel="icon" type="image/png" sizes="32x32" th:href="@{/img/logo/apple-touch-icon.png}">
@@ -122,7 +123,7 @@
                                                     <p>Тогда \(\angle \text{CBH}  = \alpha\), \(\angle ABH  = \beta\).</p>
                                                     <p>\(\triangle ABC\) ~ \(\triangle BHC\),\(\triangle BHC\) ~ \(\triangle ABH\) по двум углам.</p>
                                                     <p> Если в \(\triangle ABC\) \(\angle ABC\) является прямым, то:</p>
-                                                    <p>1) \(\frac{b}{c} = \frac{HC}{b}\) из подобия \(\triangle BHC\) и \(\triangle ABC\), а так же \(\triangle AHC\) и \(\triangle ABH\) соответсвенно.</p>
+                                                    <p>1)\(\frac{b}{c} = \frac{HC}{b}\) из подобия \(\triangle BHC\) и \(\triangle ABC\), а так же \(\triangle AHC\) и \(\triangle ABH\) соответсвенно.</p>
                                                     <p>2) \(\frac{a}{c} = \frac{AH}{a}\) из подобия \(\triangle BHC\) и \(\triangle ABC\), а так же \(\triangle AHC\) и \(\triangle ABH\) соответсвенно.</p>
                                                     <p>3) Из первого: \(b^2 = HC * c\), из второго: \(a^2 = c * AH\)</p>
                                                     <p>4) Складывая \(b^2 + a^2\), получаем:</p>
