--- a/src/main/resources/templates/base/header.html
+++ b/src/main/resources/templates/base/header.html
@@ -23,7 +23,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a th:href="@{/bookmarks}" class="nav-link">Закладки</a>
+                            <a th:href="@{/}" class="nav-link">Закладки</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Книги</a>
@@ -32,7 +32,7 @@
                             <a href="#" class="nav-link">Новости</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">О нас</a>
+                            <a href="https://github.com/Mutata56/MatematiX" class="nav-link">О нас</a>
                         </li>
                     </ul>
                         <div class="register" sec:authorize="isAnonymous()">
