--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,21 +31,21 @@
     </div>
     <div class="carousel-inner">
         <div class="text-center carousel-item active" style="cursor: pointer">
-            <p class="d-block w-100 carousel--card--content">
+            <p onclick="location.href = `/articles/Formulas`" class="d-block w-100 carousel--card--content">
                 <em><strong style="user-select:none;color: #efefef;font-size: 40px;letter-spacing: 2px">
                 МЕТОД РАЦИОНАЛИЗАЦИИ</strong></em>
             </p>
         </div>
         <div class="text-center carousel-item" style="cursor: pointer">
-            <p class="d-block w-100 carousel--card--content"><em><strong style="user-select:none;color: #efefef;font-size: 40px;letter-spacing: 2px">
+            <p onclick="location.href = `/articles/Formulas`" class="d-block w-100 carousel--card--content"><em><strong style="user-select:none;color: #efefef;font-size: 40px;letter-spacing: 2px">
                 ПРОИЗВОДНАЯ ФУНКЦИИ</strong></em></p>
         </div>
         <div class="text-center carousel-item" style="cursor: pointer">
-            <p class="d-block w-100 carousel--card--content"><em><strong style="user-select:none;color: #efefef;font-size: 40px;letter-spacing: 2px">
+            <p onclick="location.href = `/articles/Formulas`" class="d-block w-100 carousel--card--content"><em><strong style="user-select:none;color: #efefef;font-size: 40px;letter-spacing: 2px">
                 УРАВНЕНИЯ ФИГУР</strong></em></p>
         </div>
         <div class="text-center carousel-item" style="cursor: pointer">
-            <p class="d-block w-100 carousel--card--content"><em><strong style="user-select:none;color: #efefef;font-size: 40px;letter-spacing: 2px">
+            <p onclick="location.href = `/articles/Formulas`" class="d-block w-100 carousel--card--content"><em><strong style="user-select:none;color: #efefef;font-size: 40px;letter-spacing: 2px">
                 МЕТОД КООРДИНАТ</strong></em></p>
         </div>
     </div>
@@ -62,16 +62,16 @@
     <main>
         <img alt="Пифагор"  th:src="@{/img/card/Pythagorean.webp}" class="img-fluid grid-column1-row1 grid-content res360x450" onclick="location.href = '/articles/Pythagorean'">
         <img alt="Тригонометрия" th:src="@{/img/card/Trigonometry.webp}" class="img-fluid grid-column2-row1 grid-content res360x270" onclick="location.href = `/articles/Formulas`">
-        <img alt="Евклид" th:src="@{/img/card/Euclid.webp}" class="grid-column3-row1 grid-content res360x720">
-        <img alt="Теорема Виета" th:src="@{/img/card/Viet.webp}" class="grid-column4-row1 grid-content res360x450">
-        <img alt="Теорема Виета" th:src="@{/img/card/Viet.webp}" class="grid-column1-row2 grid-content res360x450">
+        <img alt="Евклид" th:src="@{/img/card/Euclid.webp}" class="grid-column3-row1 grid-content res360x720" onclick="location.href = '/articles/Pythagorean'">
+        <img alt="Теорема Виета" th:src="@{/img/card/Viet.webp}" class="grid-column4-row1 grid-content res360x450" onclick="location.href = '/articles/Pythagorean'">
+        <img alt="Теорема Виета" th:src="@{/img/card/Viet.webp}" class="grid-column1-row2 grid-content res360x450" onclick="location.href = '/articles/Pythagorean'">
 
-        <img alt="Теорема Безу" th:src="@{/img/card/Bezu.webp}" class="grid-column2-row2 grid-content res360x720">
-        <img alt="Модули" th:src="@{/img/card/Modules.webp}" class="grid-column4-row2 grid-content res360x360">
+        <img alt="Теорема Безу" th:src="@{/img/card/Bezu.webp}" class="grid-column2-row2 grid-content res360x720" onclick="location.href = '/articles/Pythagorean'">
+        <img alt="Модули" th:src="@{/img/card/Modules.webp}" class="grid-column4-row2 grid-content res360x360" onclick="location.href = '/articles/Pythagorean'">
 
-        <img alt="Уравнения" th:src="@{/img/card/Eq.webp}" class="grid-column1-row3 grid-content res360x360">
-        <img alt="Модуль" th:src="@{/img/card/Module.webp}" class="grid-column3-row3 grid-content res360x720">
-        <img alt="Различные уравнения" th:src="@{/img/card/DifferentEq.webp}" class="grid-column4-row3 grid-content res360x450">
+        <img alt="Уравнения" th:src="@{/img/card/Eq.webp}" class="grid-column1-row3 grid-content res360x360" onclick="location.href = '/articles/Pythagorean'">
+        <img alt="Модуль" th:src="@{/img/card/Module.webp}" class="grid-column3-row3 grid-content res360x720" onclick="location.href = '/articles/Pythagorean'">
+        <img alt="Различные уравнения" th:src="@{/img/card/DifferentEq.webp}" class="grid-column4-row3 grid-content res360x450" onclick="location.href = '/articles/Pythagorean'">
     </main>
 </div>
 
