--- a/src/main/resources/templates/admin/verificationTokens.html
+++ b/src/main/resources/templates/admin/verificationTokens.html
@@ -138,6 +138,9 @@
     let csrf = [[${_csrf.token}]];
 
      const successFunction = (data) => {
+        let totalBlock = data.r;
+        data = data.t;
+        $("#totalCounter").text(`из ${totalBlock} страница`);
         $("#tableBody").empty();
         for (index = 0;index < data.length;index++) {
 
