--- a/src/main/resources/templates/jax.html
+++ b/src/main/resources/templates/jax.html
@@ -26,9 +26,7 @@
     <main class="elementAfterHeader">
         <h1>Что такое MathJax, и почему это важно?</h1>
         <div class="content">
-            <div style="max-width: 50%;margin-left:auto;margin-right:auto">
-                <img th:src="@{/img/Mathjax.png}" class="img-fluid" src="" alt="MathJax">
-            </div>
+
             <p>MathJax - кроссбраузерная библиотека, позволяющая записывать математические формулы в удобном для пользователя виде.Но Почему  мы считаем важным оповестить вас, наших пользователей, об использовании данной технологии?</p>
             <p>MathJax добавляет к формулам контекстное меню, вызываемое правой кнопкой мыши или щелчком с нажатой Ctrl:</p>
             <img th:src="@{/img/Example1.png}" src="" alt="Первый Пример">
@@ -38,15 +36,15 @@
             <p>С помощью отрисовщика формул вы можете выбрать наиболее удобный вариант отображения формул:</p>
             <figure>
                 <img th:src="@{/img/Example3.png}" src="" alt="HTML CSS">
-                <figcaption>Вариант HTML CSS</figcaption>
+                <figcaption style="color: white;">Вариант HTML CSS</figcaption>
             </figure>
             <figure>
                 <img th:src="@{/img/Example4.png}" src="" alt="SVG">
-                <figcaption>Вариант SVG</figcaption>
+                <figcaption style="color: white;">Вариант SVG</figcaption>
             </figure>
             <figure>
                 <img th:src="@{/img/Example5.png}" src="" alt="Preview HTML">
-                <figcaption style="margin-bottom: 40px">Вариант Preview HTML</figcaption>
+                <figcaption style="color: white;">Вариант Preview HTML</figcaption>
             </figure>
             <p><b>Администрация нашего сайта настоятельно рекомендует использовать HTML CSS.</b></p>
             <p style="margin-bottom: 200px">Узнать про остальные функции можно, вызывав контекстное меню MathJAX и выбрав пункт “О MathJax”.</p>
